--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 APP_NAME="iWellCare System"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:ei2UhAfCXUbrdHxlLSPw16ryLF/tf+QucILZRXsLpx0=
-APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_DEBUG=false
+APP_URL=https://iwellcare-production.up.railway.app
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=error
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=iwellcare
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=${PGHOST}
+DB_PORT=${PGPORT}
+DB_DATABASE=${PGDATABASE}
+DB_USERNAME=${PGUSER}
+DB_PASSWORD=${PGPASSWORD}
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
