--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-APP_NAME="iWellCare System"
-APP_ENV=production
+APP_NAME="iWellCare Healthcare System"
+APP_ENV=local
 APP_KEY=base64:ei2UhAfCXUbrdHxlLSPw16ryLF/tf+QucILZRXsLpx0=
-APP_DEBUG=false
-APP_URL=https://iwellcare-production.up.railway.app
+APP_DEBUG=true
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=${PGHOST}
-DB_PORT=${PGPORT}
-DB_DATABASE=${PGDATABASE}
-DB_USERNAME=${PGUSER}
-DB_PASSWORD=${PGPASSWORD}
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=iwellcare
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,4 +56,4 @@ VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}" 
