--- a/render.yaml
+++ b/render.yaml
@@ -1,57 +1,50 @@
 services:
-  # A Laravel web service
   - type: web
-    name: iwellcare-web
-    env: php
-    plan: starter
-    buildCommand: chmod +x render-build.sh && ./render-build.sh
-    startCommand: vendor/bin/heroku-php-apache2 public/
+    name: iwellcare-app
+    runtime: docker
+    buildCommand: "docker build -t iwellcare-app ."
+    startCommand: "docker run -p $PORT:80 iwellcare-app"
     envVars:
       - key: APP_ENV
         value: production
-      - key: APP_DEBUG
-        value: false
       - key: APP_KEY
         generateValue: true
-      - key: APP_URL
-        value: https://iwellcare-web.onrender.com
       - key: DB_CONNECTION
         value: mysql
       - key: DB_HOST
-        fromDatabase:
+        fromService:
+          type: pserv
           name: iwellcare-db
           property: host
       - key: DB_PORT
-        fromDatabase:
+        fromService:
+          type: pserv
           name: iwellcare-db
           property: port
       - key: DB_DATABASE
-        fromDatabase:
+        fromService:
+          type: pserv
           name: iwellcare-db
           property: database
       - key: DB_USERNAME
-        fromDatabase:
+        fromService:
+          type: pserv
           name: iwellcare-db
-          property: username
+          property: user
       - key: DB_PASSWORD
-        fromDatabase:
+        fromService:
+          type: pserv
           name: iwellcare-db
           property: password
-      - key: CACHE_DRIVER
-        value: file
-      - key: SESSION_DRIVER
-        value: file
-      - key: QUEUE_CONNECTION
-        value: sync
-      - key: LOG_CHANNEL
-        value: stack
-      - key: MAIL_MAILER
-        value: log
-      - key: FILESYSTEM_DISK
-        value: local
 
-databases:
-  - name: iwellcare-db
-    databaseName: iwellcare
-    user: iwellcare_user
-    plan: starter
+  - type: pserv
+    name: iwellcare-db
+    runtime: mysql
+    version: 8.0
+    envVars:
+      - key: MYSQL_DATABASE
+        value: iwellcare
+      - key: MYSQL_USER
+        value: iwellcare_user
+      - key: MYSQL_PASSWORD
+        generateValue: true
