--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,39 @@ services:
   - type: web
     name: iwellcare-app
     runtime: docker
-    buildCommand: "docker build -t iwellcare-app ."
-    startCommand: "docker run -p $PORT:80 iwellcare-app"
+    dockerfilePath: ./Dockerfile
+    envVars:
+      - key: APP_ENV
+        value: production
+      - key: APP_KEY
+        generateValue: true
+      - key: DB_CONNECTION
+        value: mysql
+      - key: DB_HOST
+        fromService:
+          type: pserv
+          name: iwellcare-db
+          property: host
+      - key: DB_PORT
+        fromService:
+          type: pserv
+          name: iwellcare-db
+          property: port
+      - key: DB_DATABASE
+        fromService:
+          type: pserv
+          name: iwellcare-db
+          property: database
+      - key: DB_USERNAME
+        fromService:
+          type: pserv
+          name: iwellcare-db
+          property: user
+      - key: DB_PASSWORD
+        fromService:
+          type: pserv
+          name: iwellcare-db
+          property: password
     envVars:
       - key: APP_ENV
         value: production
